--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,12 @@
+<html>
+<head>
+  <meta charset="utf8">
+  <title>APM</title>
+  <base href="/">
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+<body>
 <my-app>loading</my-app>
+</body>
+</html>
